# kio-windows-thumbnails

./: .gitignore  CMakeLists.txt  README.md  flake.nix  io.jchw.kio-windows-thumbnails.metainfo.xml  package.nix
exe/: CMakeLists.txt  common.h  dib.cc  dib.h  exe.cc  exe.h  exethumb.cc  exethumb.h  exethumbnail.json  exeutil.cc  exeutil.h  ne.cc  ne.h  pe.cc  pe.h  resource.cc  resource.h
scripts/: run-test-dolphin.sh  update-compile-commands.sh
